--- a/package.json
+++ b/package.json
@@ -14,7 +14,15 @@
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@prisma/client": "^3.12.0",
+    "@types/node": "^17.0.23",
+    "@types/react": "^18.0.1",
+    "autoprefixer": "^10.4.4",
     "eslint": "8.13.0",
-    "eslint-config-next": "12.1.4"
+    "eslint-config-next": "12.1.4",
+    "postcss": "^8.4.12",
+    "prisma": "^3.12.0",
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.6.3"
   }
 }
